@@ -1,0 +1,13 @@
+<h1>BLACKPINK成員Jennie強勢回歸！新單曲《Mantra》即將發行，能否再登告示牌百大熱門榜？</h1>
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/oGeRh9xeWnw" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+<p>韓國流行音樂女子組合BLACKPINK成員Jennie將於10月11日推出她的新單曲《Mantra》。這是她自2023年10月發行的單曲《You & Me》以來，首次以個人身份推出新音樂。</p>
+<p>Jennie在她的官方網站上宣布了這個消息，並提供了鏈接讓粉絲們可以在Spotify和Apple Music等主要音樂串流平台上預先儲存新歌。同時，她也發布了一個《Mantra》的預覽版本，展現了耳熟能詳的旋律。</p>
+<p>Jennie曾與威肯和莉莉-蘿絲·戴普合作，推出了《One of the Girls》，這首歌是HBO系列劇《偶像漩涡》的原聲帶。《One of the Girls》在Spotify上獲得了超過10億次播放，並在告示牌百大熱門榜上停留了20周，取得了不錯的成績。</p>
+<p>憑藉這首歌，Jennie成為了第一位獲得美國唱片業協會白金認證的韓國女歌手。白金認證代表著至少100萬張的銷售量。</p>
+<p>今年4月，Jennie的個人出道單曲《Solo》的音樂視頻在YouTube上獲得了超過10億次播放，使她成為第一位達到這一成就的韓國女歌手。</p>
+<p>為了更好地推廣她的海外項目，Jennie在9月與哥倫比亞唱片公司合作，這是一家索尼音樂娛樂旗下的美國主要唱片公司，代表著碧昂絲、阿黛爾和哈里·斯泰爾斯等全球明星。哥倫比亞唱片公司承諾將為Jennie的個人項目提供廣泛的支持。</p>
+<p>隨著《Mantra》的即將發行，粉絲們正在熱切地期待著Jennie是否能夠以個人身份第二次登上告示牌百大熱門榜。雖然她以前曾多次與BLACKPINK一起登上榜單，但她的個人出道單曲《One of the Girls》才是她首次以個人身份登上榜單。她的早期單曲《You & Me》曾登上告示牌榜外單曲榜的第二位，但未能登上主榜。</p>
+
+<p>資料來源： Korea Herald</p>
