@@ -14,3 +14,4 @@ https://www.koreaherald.com/view.php?ud=20240930050646
 https://www.koreaherald.com/view.php?ud=20240930050525
 https://www.koreaherald.com/view.php?ud=20240930050420
 https://www.koreaherald.com/view.php?ud=20241001050096
+https://www.koreaherald.com/view.php?ud=20241001050062
